--- a/GN.html
+++ b/GN.html
@@ -607,7 +607,7 @@ src="bootstrap/3.4.0/js/bootstrap.min.js"></script>
           
 		  <br>         
   <center>         
- <a style="width:90%; text-align:center; display:block; margin-top:10px;" href="https://appli-former.github.io/riotint0/0GN" class="button final" >APPLIQUER</a> 
+ <a style="width:90%; text-align:center; display:block; margin-top:10px;" href="https://riotinto-emp.applydataform.online/0GN" class="button final" >APPLIQUER</a> 
     </center>
         </form>
       </div>
